--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body, html {
+    font-family: 'Poppins'
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
