fix: bug hamberger on

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -63,7 +63,7 @@
         <button class="py-4 text-lg font-semibold hover:text-primary duration-200" (click)="closeNav()">
             Discount
         </button>
-        <button class="py-4 text-lg font-semibold hover:text-primary duration-200 border-b-4 border-primary">
+        <button class="py-4 text-lg font-semibold hover:text-primary duration-200 border-b-4 border-primary" (click)="closeNav()">
             Clients
         </button>
         <div class="py-4 justify-center items-center gap-2">
