fix: font size trailer

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="flex items-center gap-3 cursor-pointer">
                 <span class="material-symbols-outlined text-white border rounded-full p-2 lg:p-4 bg-primary border-primary">play_arrow</span>
-                <p class="uppercase font-bold text-white text-sm">watch trailer</p>
+                <p class="uppercase font-bold text-white text-xs lg:text-sm">watch trailer</p>
             </div>
         </div>
     </div>
