--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center items-center w-screen h-screen bg-cover bg-no-repeat" style="background-image: url('../../../assets/background-hero.png');">
+<div class="flex justify-center items-center w-screen h-screen bg-center bg-cover bg-no-repeat" style="background-image: url('../../../assets/background-hero.png');">
     <div>
         <h1 class="text-2xl lg:text-5xl text-primary font-pacifico text-center">Sweet Perfection Bliss</h1>
         <p class="w-3/4 lg:w-2/3 text-white/75 pt-6 text-center mx-auto text-sm lg:text-base">Indulge in the sweetest delights at our bakery. Our cakes are made with the freshest ingredients and baked to perfection. We offer a wide variety of flavors and designs to choose from for any occasion. From classic favorites to modern creations, we have something for everyone. Our friendly staff is always happy to assist you in finding the perfect cake for your special event. Come and experience the taste of true bakery excellence at our shop. Order online for easy pickup or delivery. Treat yourself to something sweet today!</p>
