--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,64 +2,66 @@
     <div class="w-full">
         <p class="text-lg font-pacifico text-center text-primary">About CakeTime</p>
         <div class="flex items-center justify-center mt-5">
-            <div class="px-16 border-2 border-black bg-black"></div>
-            <div class="px-16 border-2 border-black bg-black py-0.5"></div>
-            <div class="px-16 border-2 border-black bg-black"></div>
+            <div class="px-10 lg:px-16 border-2 border-black bg-black"></div>
+            <div class="px-10 lg:px-16 border-2 border-black bg-black py-0.5"></div>
+            <div class="px-10 lg:px-16 border-2 border-black bg-black"></div>
         </div>
-        <h1 class="uppercase text-center py-4 text-3xl font-bold">welcome to caketime</h1>
+        <h1 class="uppercase text-center py-4 text-xl lg:text-3xl font-bold">welcome to caketime</h1>
         <div class="flex items-center justify-center">
-            <div class="px-16 border-2 border-black bg-black"></div>
-            <div class="px-16 border-2 border-black bg-black py-0.5"></div>
-            <div class="px-16 border-2 border-black bg-black"></div>
+            <div class="px-10 lg:px-16 border-2 border-black bg-black"></div>
+            <div class="px-10 lg:px-16 border-2 border-black bg-black py-0.5"></div>
+            <div class="px-10 lg:px-16 border-2 border-black bg-black"></div>
         </div>
-        <div class="flex justify-center mt-20 items-center">
-            <div class="w-1/3">
-                <img src="https://images.unsplash.com/photo-1602351447937-745cb720612f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=386&q=80" />
+        <div class="lg:flex justify-center mt-10 lg:mt-20 items-center">
+            <div class="lg:w-1/3 w-full">
+                <img src="https://images.unsplash.com/photo-1602351447937-745cb720612f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=386&q=80" class="w-full lg:w-auto" />
             </div>
-            <div class="w-2/3">
-                <h1 class="text-3xl font-bold capitalize">Sweetness that delights your senses</h1>
-                <p class="pt-5 text-lg text-black/50">
+            <div class="w-full mt-6 lg:mt-0 lg:w-2/3">
+                <h1 class="text-xl lg:text-3xl font-bold capitalize text-center lg:text-start">Sweetness that delights your senses</h1>
+                <p class="pt-5 text-sm text-center xl:text-lg text-black/50 lg:text-start">
                     The history of bread stores dates back to the early 20th century, when the first bakery was established in a small town. The bakery was a family-owned business that produced fresh bread daily using traditional methods passed down from generation to generation. <br> <br> The bread was made with natural ingredients, such as flour, yeast, water, and salt, and baked in a wood-fired oven. This resulted in bread with a crispy crust and a soft, fluffy interior. As the popularity of bread grew, more bakeries opened and began producing a wider variety of breads, including whole wheat, rye, and sourdough. With the introduction of new baking techniques, such as mechanical mixers and automated ovens, bakeries were able to produce bread more efficiently and at a lower cost.
                 </p>
-                <button class="border-2 rounded-full p-2 border-primary mt-4">
-                    <p class="uppercase bg-primary rounded-full font-bold text-white py-2 lg:py-4 px-6 lg:px-8 text-xs">Order Now</p>
-                </button>
+                <div class="flex justify-center lg:justify-start">
+                    <button class="border-2 rounded-full p-2 border-primary mt-4">
+                        <p class="uppercase bg-primary rounded-full font-bold text-white py-2 lg:py-4 px-6 lg:px-8 text-xs">Order Now</p>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
 </div>
-<div class="grid grid-cols-3 gap-9 mb-24 w-full px-8 lg:px-24 py-12 bg-no-repeat bg-center bg-black" style="background-image: url('../../../assets/background-service.png');">
-    <div class="flex justify-between items-center gap-5">
-        <div class="w-1/4 border-4 border-primary">
-            <div class="text-center py-7">
-                <i class="fa-solid fa-star text-4xl text-primary"></i>
+<div class="mt-10 lg:mt-0 lg:grid grid-cols-3 gap-9 mb-24 w-full px-8 lg:px-24 py-12 bg-no-repeat bg-center bg-cover" style="background-image: url('../../../assets/background-service.png');">
+    <div class="flex flex-col lg:flex-row justify-between items-center gap-5">
+        <div class="w-1/5 lg:w-1/4 border-4 border-primary">
+            <div class="text-center py-6 lg:py-7">
+                <i class="fa-solid fa-star text-xl lg:text-4xl text-primary"></i>
             </div>
         </div>
         <div class="w-3/4">
-            <h1 class="capitalize text-white font-bold text-3xl">overall rating</h1>
-            <p class="text-white text-lg pt-2">4.5 Rating</p>
+            <h1 class="capitalize text-white font-bold text-lg lg:text-3xl text-center lg:text-start">overall rating</h1>
+            <p class="text-white text-sm lg:text-lg pt-2 text-center lg:text-start">4.5 Rating</p>
         </div>
     </div>
-    <div class="flex justify-between items-center gap-5">
-        <div class="w-1/4 border-4 border-primary">
-            <div class="text-center py-7">
-                <i class="fa-solid fa-users text-4xl text-primary"></i>
+    <div class="flex flex-col lg:flex-row justify-between items-center gap-5 my-6 lg:my-0">
+        <div class="w-1/5 lg:w-1/4 border-4 border-primary">
+            <div class="text-center py-6 lg:py-7">
+                <i class="fa-solid fa-star text-xl lg:text-4xl text-primary"></i>
             </div>
         </div>
         <div class="w-3/4">
-            <h1 class="capitalize text-white font-bold text-3xl">all clients</h1>
-            <p class="text-white text-lg pt-2">1920 Clients</p>
+            <h1 class="capitalize text-white font-bold text-lg lg:text-3xl text-center lg:text-start">all clients</h1>
+            <p class="text-white text-sm lg:text-lg pt-2 text-center lg:text-start">1920 Clients</p>
         </div>
     </div>
-    <div class="flex justify-between items-center gap-5">
-        <div class="w-1/4 border-4 border-primary">
-            <div class="text-center py-7">
-                <i class="fa-solid fa-cake-candles text-4xl text-primary"></i>
+    <div class="flex flex-col lg:flex-row justify-between items-center gap-5">
+        <div class="w-1/5 lg:w-1/4 border-4 border-primary">
+            <div class="text-center py-6 lg:py-7">
+                <i class="fa-solid fa-star text-xl lg:text-4xl text-primary"></i>
             </div>
         </div>
         <div class="w-3/4">
-            <h1 class="capitalize text-white font-bold text-3xl">all menu cake</h1>
-            <p class="text-white text-lg pt-2">28 Cakes</p>
+            <h1 class="capitalize text-white font-bold text-lg lg:text-3xl text-center lg:text-start">all menu cake</h1>
+            <p class="text-white text-sm lg:text-lg pt-2 text-center lg:text-start">28 Cakes</p>
         </div>
     </div>
 </div>
