--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -37,7 +37,7 @@
                 <i class="fa-solid fa-star text-xl lg:text-4xl text-primary"></i>
             </div>
         </div>
-        <div class="w-3/4 bg-black">
+        <div class="w-3/4">
             <h1 class="capitalize text-white font-bold text-lg lg:text-3xl text-start">overall rating</h1>
             <p class="text-white text-sm lg:text-lg pt-2 text-start">4.5 Rating</p>
         </div>
@@ -48,20 +48,20 @@
                 <i class="fa-solid fa-users text-xl lg:text-4xl text-primary"></i>
             </div>
         </div>
-        <div class="w-3/4 bg-black">
-            <h1 class="capitalize text-white font-bold text-lg lg:text-3xl text-start">overall rating</h1>
-            <p class="text-white text-sm lg:text-lg pt-2 text-start">4.5 Rating</p>
+        <div class="w-3/4">
+            <h1 class="capitalize text-white font-bold text-lg lg:text-3xl text-start">all shop visitor</h1>
+            <p class="text-white text-sm lg:text-lg pt-2 text-start">1202 Clients</p>
         </div>
     </div>
-    <div class="flex justify-between items-center gap-4 mt-4 lg:mt-0">
+    <div class="flex justify-between items-center gap-4">
         <div class="w-2/4 lg:w-1/4 border-4 border-primary">
             <div class="text-center py-6 lg:py-7">
-                <i class="fa-solid fa-cake-candles text-xl lg:text-4xl text-primary"></i>
+                <i class="fa-solid fa-star text-xl lg:text-4xl text-primary"></i>
             </div>
         </div>
-        <div class="w-3/4 bg-black">
-            <h1 class="capitalize text-white font-bold text-lg lg:text-3xl text-start">overall rating</h1>
-            <p class="text-white text-sm lg:text-lg pt-2 text-start">4.5 Rating</p>
+        <div class="w-3/4">
+            <h1 class="capitalize text-white font-bold text-lg lg:text-3xl text-start">All menu cakes</h1>
+            <p class="text-white text-sm lg:text-lg pt-2 text-start">23 Cakes</p>
         </div>
     </div>
 </div>
