--- a/src/app/components/birthday-cake/birthday-cake.component.html
+++ b/src/app/components/birthday-cake/birthday-cake.component.html
@@ -2,7 +2,21 @@
     <div class="w-full grid grid-cols-2 gap-4">
         <div class="w-full flex justify-start items-center">
             <div class="w-1/4">
-                <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1089&q=80" class="w-full" />
+                <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1089&q=80" class="w-full h-[105px]" />
+                <p class="py-1 bg-black text-primary font-bold">$99.99</p>
+            </div>
+            <div class="w-3/4 bg-secondary h-full p-4">
+                <div class="border-[3px] border-white h-full flex justify-start items-center p-4">
+                    <div>
+                        <h1 class="uppercase text-xl font-bold text-start">bERTHDAY CAKE sPECIAL</h1>
+                        <p class="text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="w-full flex justify-start items-center">
+            <div class="w-1/4">
+                <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1089&q=80" class="w-full h-[105px]" />
                 <p class="py-1 bg-black text-primary font-bold">$99.99</p>
             </div>
             <div class="w-3/4 bg-secondary h-full p-4">
@@ -16,7 +30,7 @@
         </div>
         <div class="w-full flex justify-start items-center">
             <div class="w-1/4">
-                <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1089&q=80" class="w-full" />
+                <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1089&q=80" class="w-full h-[105px]" />
                 <p class="py-1 bg-black text-primary font-bold">$99.99</p>
             </div>
             <div class="w-3/4 bg-secondary h-full p-4">
@@ -30,7 +44,7 @@
         </div>
         <div class="w-full flex justify-start items-center">
             <div class="w-1/4">
-                <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1089&q=80" class="w-full" />
+                <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1089&q=80" class="w-full h-[105px]" />
                 <p class="py-1 bg-black text-primary font-bold">$99.99</p>
             </div>
             <div class="w-3/4 bg-secondary h-full p-4">
@@ -44,7 +58,7 @@
         </div>
         <div class="w-full flex justify-start items-center">
             <div class="w-1/4">
-                <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1089&q=80" class="w-full" />
+                <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1089&q=80" class="w-full h-[105px]" />
                 <p class="py-1 bg-black text-primary font-bold">$99.99</p>
             </div>
             <div class="w-3/4 bg-secondary h-full p-4">
@@ -58,21 +72,7 @@
         </div>
         <div class="w-full flex justify-start items-center">
             <div class="w-1/4">
-                <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1089&q=80" class="w-full" />
-                <p class="py-1 bg-black text-primary font-bold">$99.99</p>
-            </div>
-            <div class="w-3/4 bg-secondary h-full p-4">
-                <div class="border-[3px] border-white h-full flex justify-start items-center p-4">
-                    <div >
-                        <h1 class="uppercase text-xl font-bold text-start">bERTHDAY CAKE sPECIAL</h1>
-                        <p class="text-sm text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="w-full flex justify-start items-center">
-            <div class="w-1/4">
-                <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1089&q=80" class="w-full" />
+                <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1089&q=80" class="w-full h-[105px]" />
                 <p class="py-1 bg-black text-primary font-bold">$99.99</p>
             </div>
             <div class="w-3/4 bg-secondary h-full p-4">
