--- a/src/app/components/custom-cake/custom-cake.component.html
+++ b/src/app/components/custom-cake/custom-cake.component.html
@@ -1,1 +1,3 @@
-<p class="text-primary">custom-cake works!</p>
+<div class="w-full container mx-auto px-8 lg:px-24 my-12">
+    <p class="capitalize text-sm lg:text-lg font-bold text-primary my-4">Custom Cake</p>
+</div>
