fix: remove discount page in mobile responsive

--- a/src/app/components/discount/discount.component.html
+++ b/src/app/components/discount/discount.component.html
@@ -1,4 +1,4 @@
-<div class="w-full lg:px-24 px-8 bg-violet-50 bg-cover relative flex justify-center pt-60 pb-20 bg-none" style="background-image: url('../../../assets/background-discount.png');">
+<div class="hidden w-full lg:px-24 px-8 bg-violet-50 bg-cover relative lg:flex justify-center pt-60 pb-20 bg-none" style="background-image: url('../../../assets/background-discount.png');">
     <div class="w-1/3 mx-auto">
         <p class="text-4xl uppercase font-bold text-white text-center">Bread discount now!</p>
         <button class="bg-primary p-4 rounded-full w-full mt-10">
