--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,7 +17,7 @@
                     Menu
                 </button>
             </li>
-            <li class="pr-8">
+            <li class="pr-8 hidden lg:block">
                 <button class="text-lg">
                     Discount
                 </button>
@@ -59,9 +59,6 @@
         </button>
         <button class="py-4 text-lg font-semibold hover:text-primary duration-200" (click)="closeNav()">
             Menu
-        </button>
-        <button class="py-4 text-lg font-semibold hover:text-primary duration-200" (click)="closeNav()">
-            Discount
         </button>
         <button class="py-4 text-lg font-semibold hover:text-primary duration-200 border-b-4 border-primary" (click)="closeNav()">
             Clients
